# MyWallet

./: .gitignore  CMakeLists.txt  README.md  appIcon.rc  main.cpp  package.json  pnpm-lock.yaml  svelte.config.js
_CPack_Packages/Linux/DEB/MyWallet-1.0-Linux/: control  md5sums
_CPack_Packages/Linux/DEB/MyWallet-1.0-Linux/usr/include/eraser/: erased.hpp  erased.inl  interface.hpp  interface.inl  utils.hpp
_CPack_Packages/Linux/DEB/MyWallet-1.0-Linux/usr/include/eraser/storage/: unique.hpp
_CPack_Packages/Linux/DEB/MyWallet-1.0-Linux/usr/include/eraser/traits/: method.hpp
_CPack_Packages/Linux/DEB/MyWallet-1.0-Linux/usr/include/poolparty/: task.inl
_CPack_Packages/Linux/RPM/MyWallet-1.0-Linux/usr/include/eraser/: id.hpp  id.inl
_CPack_Packages/Linux/RPM/MyWallet-1.0-Linux/usr/include/eraser/experimental/: deduce.inl
_CPack_Packages/Linux/RPM/MyWallet-1.0-Linux/usr/include/poolparty/: task.hpp
_CPack_Packages/Linux/RPM/MyWallet-1.0-Linux/usr/include/saucer/: config.hpp
_CPack_Packages/Linux/TGZ/MyWallet-1.0-Linux/include/eraser/: method.hpp
_CPack_Packages/Linux/TGZ/MyWallet-1.0-Linux/include/eraser/experimental/: deduce.hpp
_CPack_Packages/Linux/TGZ/MyWallet-1.0-Linux/include/eraser/storage/: shared.hpp  shared.inl  unique.inl
_CPack_Packages/Linux/TGZ/MyWallet-1.0-Linux/include/eraser/traits/: interface.hpp  utils.hpp
_CPack_Packages/Linux/TGZ/MyWallet-1.0-Linux/include/poolparty/: pool.hpp  pool.inl
include_cpp/: my.h  transaction.h  wallet.h  walletManager.h
src/: +page.svelte  AllTransactions.svelte  app.css  app.html
src/lib/: index.ts
src/routes/: +layout.svelte  +page.svelte  WalletModal.svelte
src/routes/aboutUs/: +page.svelte
src/routes/allTransactions/: +page.svelte
src/routes/allWallets/: +page.svelte
src/routes/license/: +page.svelte
src/routes/recyclebin/: +page.svelte
src/routes/signUp/: +page.svelte
src_cpp/: create_wallet.cpp  delete_record.cpp  get_records.cpp  get_wallets.cpp  init_db.cpp  record_transaction.cpp  record_transfer.cpp  update_record.cpp  update_wallet.cpp
